--- a/Chan_Test/src/main/resources/static/index.html
+++ b/Chan_Test/src/main/resources/static/index.html
@@ -9,11 +9,16 @@
     <h1>회원 정보 조회(아이디 검색)</h1>
 
 
-        <form action="user/select">
-            <input type="text" placeholder="회원 아이디 검색" id="searchMember" name="searchMember"> 
-            <button id="selectUserBtn">조회</button>
-        </form>
+    <form action="user/select">
+        <input type="text" placeholder="회원 아이디 검색" id="searchMember" name="searchMember"> 
+        <button id="selectUserBtn">조회</button>
+    </form>
 
+    <h1>이름 검색</h1>
+    <form action="user/selectName">
+        <input type="text" placeholder="회원 이름 검색" id="inputName" name="inputName"> 
+        <button id="selectUserBtn">조회</button>
+    </form>
 
 
 
